--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "./forever_app default",
     "stop": "forever stop 3drepo.js",
     "restart": "npm stop; npm start",
-    "postinstall": "node ./postinstall.js",
+    "everything": "npm install && cd frontend && npm install",
     "upgrade": "git checkout master && git pull && npm restart",
     "test": "NODE_ENV=test grunt test",
     "test-int-clean": "./backend/test/cleanup/cleanup.sh",
