--- a/backend/package.json
+++ b/backend/package.json
@@ -3,18 +3,17 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "./forever_app default",
+    "start": "./../run/forever_app default",
     "stop": "forever stop 3drepo.js",
     "restart": "npm stop; npm start",
-    "everything": "npm install && cd frontend && npm install",
     "upgrade": "git checkout master && git pull && npm restart",
     "test": "NODE_ENV=test grunt test",
-    "test-int-clean": "./backend/test/cleanup/cleanup.sh",
+    "test-int-clean": "./test/cleanup/cleanup.sh",
     "test-int": "NODE_ENV=test npm run create-ghost && grunt test-integrated",
     "test-clean-and-int": "npm run test-int-clean && npm run test-int",
     "test-all": "NODE_ENV=test npm run test && npm run test-int-clean && npm run test-int",
     "dev": "nodemon 3drepo.js",
-    "create-ghost": "node scripts/createGhost"
+    "create-ghost": "node ../scripts/createGhost"
   },
   "dependencies": {
     "amqplib": "0.4.1",
