--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "3drepo.io",
-  "version": "0.0.1",
+  "name": "3drepo.io-backend",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "./../run/forever_app default",
     "stop": "forever stop 3drepo.js",
     "restart": "npm stop; npm start",
     "upgrade": "git checkout master && git pull && npm restart",
-    "test": "NODE_ENV=test grunt test",
+    "test": "npm run test-unit && npm run test-int",
+    "test-unit": "gulp test:unit",
     "test-int-clean": "./test/cleanup/cleanup.sh",
-    "test-int": "NODE_ENV=test npm run create-ghost && grunt test-integrated",
+    "test-int": "npm run create-ghost && gulp test:integrated",
     "test-clean-and-int": "npm run test-int-clean && npm run test-int",
-    "test-all": "NODE_ENV=test npm run test && npm run test-int-clean && npm run test-int",
-    "dev": "nodemon 3drepo.js",
-    "create-ghost": "node ../scripts/createGhost"
+    "create-ghost": "NODE_ENV=test NODE_CONFIG_DIR=../config node ../scripts/createGhost",
+    "dev": "nodemon 3drepo.js"
   },
   "dependencies": {
     "amqplib": "0.4.1",
@@ -67,15 +67,15 @@
   },
   "devDependencies": {
     "chai": "3.5.0",
-    "grunt": "0.4.1",
-    "grunt-env": "0.4.4",
-    "grunt-environment": "0.4.2",
-    "grunt-mocha-test": "0.13.2",
-    "grunt-contrib-jshint": "0.11.3",
-    "jshint": "2.9.5",
+    "eslint": "4.2.0",
+    "gulp": "3.9.1",
+    "gulp-env": "^0.4.0",
+    "gulp-eslint": "^4.0.0",
+    "gulp-mocha": "^4.3.1",
     "minify": "2.1.8",
     "mockgoose": "6.0.3",
     "mongo-mock": "2.0.0",
+    "mongodb-prebuilt": "^6.3.3",
     "mongoose-mock": "0.4.0",
     "proxyquire": "1.7.4",
     "response-time": "2.3.1",
