--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "3drepo.io-frontend",
   "version": "1.0.0",
   "description": "The frontend for 3drepo.io",
   "main": "index.js",
