ISSUE #406 - fix test

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,10 @@ tools/release/*.exe
 
 #legal
 pug/legal
+
+uploads/
+backend/uploads/
+backend/mongodb-prebuilt-*
+backend/3drepo.log
+npm-debug.log.*
+.vscode/
