--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node_js
 git:
   submodules: false
+  depth: 1
 node_js:
     - "6.11.2"
 env:
@@ -25,7 +26,6 @@ before_install:
     - sudo apt-get install -y mongodb-org
     - mongod --version
     - sudo service mongod start
-    - yarn install -g npm
     - yarn install -g gulp
     - yarn link gulp
     - sleep 15
