--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,12 @@
     "start": "./../run/forever_app default",
     "stop": "forever stop 3drepo.js",
     "restart": "npm stop; npm start",
+    "gulp": "gulp",
     "upgrade": "git checkout master && git pull && npm restart",
     "test": "npm run test-unit && npm run test-int",
-    "test-unit": "gulp test:unit",
+    "test-unit": "npm run gulp test:unit",
     "test-int-clean": "./test/cleanup/cleanup.sh",
-    "test-int": "npm run create-ghost && gulp test:integrated",
+    "test-int": "npm run create-ghost && npm run gulp test:integrated",
     "test-clean-and-int": "npm run test-int-clean && npm run test-int",
     "create-ghost": "NODE_ENV=test NODE_CONFIG_DIR=../config node ../scripts/createGhost",
     "test-all": "npm run test-int-clean && npm run test"
