--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_install:
     - sudo apt-get install -y mongodb-org
     - mongod --version
     - sudo service mongod start
-    - sleep 15
+    - until nc -z localhost 27017; do sleep 1; done
     - test_ver=`git submodule status | grep tests | cut -f 2 -d '-' | cut -f 1 -d ' '`
     - cd submodules/tests
     - git checkout $test_ver
