--- a/backend/package.json
+++ b/backend/package.json
@@ -46,11 +46,13 @@
     "multer": "1.1.0",
     "multiparty": "4.1.2",
     "node-static": "0.7.7",
+    "node-stringify": "^0.2.0",
     "node-uuid": "1.4.7",
     "nodemailer": "2.3.2",
     "paypal-rest-sdk": "1.6.9",
     "phantom": "4.0.5",
     "pug": "^2.0.0-rc.2",
+    "serialize-javascript": "^1.4.0",
     "serve-favicon": "2.3.0",
     "session-file-store": "1.0.0",
     "shortid": "2.2.4",
