Revert "this is using head of master for test."
This reverts commit 7c2870221f6430db543b7a5a94f24015f8cdeae1.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,9 @@ addons:
       - g++-4.8
 before_install:
     - mkdir -p submodules
-    - git submodule update --init
+    - cd submodules
+    - git clone https://$TESTS_USER:$TESTS_PASSWORD@github.com/3drepo/tests.git
+    - cd ..
     - sudo apt-get install graphicsmagick
     - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 7F0CEB10
     - echo "deb http://repo.mongodb.org/apt/ubuntu trusty/mongodb-org/3.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-3.0.list
