--- a/backend/package.json
+++ b/backend/package.json
@@ -70,7 +70,8 @@
   },
   "devDependencies": {
     "chai": "3.5.0",
-    "eslint": "4.2.0",
+    "eslint": "^4.4.1",
+    "eslint-plugin-node": "^5.1.1",
     "gulp": "3.9.1",
     "gulp-env": "^0.4.0",
     "gulp-eslint": "^4.0.0",
