--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -17,14 +17,14 @@
   "plugins": ["node"],
   "extends": ["eslint:recommended", "plugin:node/recommended"],
   "rules": {
-    "eslint strict": ["error", "global"],
+    "node/no-unpublished-require": 0,
+    "strict": ["error", "global"],
     "no-bitwise": 2,
     "curly": 2,
     "eqeqeq": 2,
     "guard-for-in": 2,
     "no-extend-native": 2,
     "no-var": 2,
-    "strict": 0,
     "no-undef": 2,
     "no-shadow" : [
         "error"
