ISSUE #458 - Test new PayPal SDK

--- a/backend/package.json
+++ b/backend/package.json
@@ -49,9 +49,9 @@
     "node-stringify": "^0.2.0",
     "node-uuid": "1.4.7",
     "nodemailer": "2.3.2",
-    "paypal-rest-sdk": "1.6.9",
+    "paypal-rest-sdk": "^1.7.1",
     "phantom": "4.0.5",
-    "pug": "^2.0.0-rc.2",
+    "pug": "^2.0.0-rc.4",
     "serialize-javascript": "^1.4.0",
     "serve-favicon": "2.3.0",
     "session-file-store": "1.0.0",
@@ -70,7 +70,7 @@
   },
   "devDependencies": {
     "chai": "3.5.0",
-    "eslint": "^4.4.1",
+    "eslint": "^4.6.1",
     "eslint-plugin-node": "^5.1.1",
     "gulp": "3.9.1",
     "gulp-env": "^0.4.0",
