ISSUE #458 - Stub out Paypal HTTP requests

--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -12,6 +12,8 @@
     "Buffer": false,
     "describe": false,
     "it": false,
+    "after": false,
+    "before": false,
     "process": false
   },
   "plugins": ["node"],
