--- a/backend/package.json
+++ b/backend/package.json
@@ -5,16 +5,18 @@
   "scripts": {
     "start": "./../run/forever_app default",
     "stop": "forever stop 3drepo.js",
-    "restart": "npm stop; npm start",
-    "gulp": "gulp",
-    "upgrade": "git checkout master && git pull && npm restart",
-    "test": "npm run test-unit && npm run test-int",
-    "test-unit": "npm run gulp test:unit",
+    "restart": "yarn run stop; yarn run start",
+    "upgrade": "git checkout master && git pull && yarn run restart",
+    "test": "yarn run test-unit && yarn run test-int",
+    "test-unit": "gulp test:unit",
     "test-int-clean": "./test/cleanup/cleanup.sh",
-    "test-int": "npm run create-ghost && npm run gulp test:integrated",
-    "test-clean-and-int": "npm run test-int-clean && npm run test-int",
+    "test-int": "gulp test:integrated",
+    "test-int-one": "gulp test:integrated-one --script ",
+    "test-clean-and-int": "yarn run test-int-clean && yarn run test-int",
+    "test-clean-and-int-one": "yarn run test-int-clean && yarn run test-int-one",
+    "test-add-mongo": "mongo --eval \"username='admintesting'; password='admintesting'\" ../scripts/mongo-admin.js",
     "create-ghost": "NODE_ENV=test NODE_CONFIG_DIR=../config node ../scripts/createGhost",
-    "test-all": "npm run test-int-clean && npm run test"
+    "test-all": "yarn run test-int-clean && yarn run test"
   },
   "dependencies": {
     "amqplib": "0.4.1",
