--- a/backend/package.json
+++ b/backend/package.json
@@ -58,7 +58,7 @@
     "serve-favicon": "2.3.0",
     "session-file-store": "1.0.0",
     "shortid": "2.2.4",
-    "soap": "0.16.0",
+    "soap": "^0.21.0",
     "socket.io": "1.4.5",
     "socket.io-client": "1.4.0",
     "underscore": "1.8.3",
