--- a/backend/package.json
+++ b/backend/package.json
@@ -32,23 +32,17 @@
     "express-session": "1.13.0",
     "express-socket.io-session": "1.3.1",
     "fs.extra": "1.3.2",
-    "geodesy": "1.1.0",
+    "geodesy": "1.1.2",
     "gm": "1.23.0",
     "json2csv": "^3.7.3",
-    "jsonschema": "1.1.0",
     "lodash": "3.10.1",
     "mathjs": "1.7.1",
-    "mocha": "3.5.3",
     "moment": "2.13.0",
     "moment-timezone": "0.5.4",
     "mongodb": "2.2.16",
     "mongoose": "4.7.6",
     "mongoose-double": "0.0.1",
-    "mongoose-timestamp": "0.5.0",
     "multer": "1.1.0",
-    "multiparty": "4.1.2",
-    "node-static": "0.7.7",
-    "node-stringify": "^0.2.0",
     "node-uuid": "1.4.7",
     "nodemailer": "2.3.2",
     "paypal-rest-sdk": "^1.7.1",
@@ -61,13 +55,11 @@
     "soap": "^0.21.0",
     "socket.io": "1.4.5",
     "socket.io-client": "1.4.0",
-    "underscore": "1.8.3",
     "vhost": "3.0.2",
     "winston": "2.2.0",
     "winston-daily-rotate-file": "1.3.1",
     "xml2js": "0.4.17",
     "xmlbuilder": "8.2.2",
-    "xmldom": "0.1.22",
     "yauzl": "git://github.com/3drepo/yauzl.git"
   },
   "devDependencies": {
@@ -78,17 +70,12 @@
     "gulp-env": "^0.4.0",
     "gulp-eslint": "^4.0.0",
     "gulp-mocha": "^4.3.1",
-    "minify": "2.1.8",
+    "mocha": "3.5.3",
     "mockgoose": "6.0.3",
-    "mongo-mock": "2.0.0",
-    "mongodb-prebuilt": "^6.3.3",
     "mongoose-mock": "0.4.0",
     "proxyquire": "1.7.4",
-    "response-time": "2.3.1",
     "sinon": "3.2.1",
-    "socket.io-client-cookie": "0.1.0",
-    "supertest": "3.0.0",
-    "xmlhttprequest": "1.8.0"
+    "supertest": "3.0.0"
   },
   "description": "The backend for 3drepo.io",
   "main": "3drepo.js",
