ISSUE #458 - Fix unit test error

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,16 +7,16 @@
     "stop": "forever stop 3drepo.js",
     "restart": "yarn run stop; yarn run start",
     "upgrade": "git checkout master && git pull && yarn run restart",
-    "test": "yarn run test-unit && yarn run test-int",
-    "test-unit": "gulp test:unit",
-    "test-int-clean": "./test/cleanup/cleanup.sh",
-    "test-int": "gulp test:integrated",
-    "test-int-one": "gulp test:integrated-one --script ",
-    "test-clean-and-int": "yarn run test-int-clean && yarn run test-int",
-    "test-clean-and-int-one": "yarn run test-int-clean && yarn run test-int-one",
-    "test-add-mongo": "mongo --eval \"username='admintesting'; password='admintesting'\" ../scripts/mongo-admin.js",
     "create-ghost": "NODE_ENV=test NODE_CONFIG_DIR=../config node ../scripts/createGhost",
-    "test-all": "yarn run test-int-clean && yarn run test"
+    "test": "yarn run test:unit && yarn run test:int",
+    "test:all": "yarn run test",
+    "test:unit": "gulp test:unit",
+    "test:int-clean": "./test/cleanup/cleanup.sh",
+    "test:int": "gulp test:integrated",
+    "test:int-one": "gulp test:integrated-one --script ",
+    "test:clean-and-int": "yarn run test:int-clean && yarn run test:int",
+    "test:clean-and-int-one": "yarn run test:int-clean && yarn run test:int-one",
+    "test:add-mongo": "mongo --eval \"username='admintesting'; password='admintesting'\" ../scripts/mongo-admin.js"
   },
   "dependencies": {
     "amqplib": "0.4.1",
