ISSUE #458 - Add test coverage using istanbul/nyc

--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,8 @@ pug/legal
 
 uploads/
 backend/uploads/
+backend/coverage
+backend/.nyc_output
 backend/mongodb-prebuilt-*
 backend/3drepo.log
 npm-debug.log.*
