--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,12 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "gulp": "gulp"
+    "gulp": "gulp",
+    "wdm": "webdriver-manager",
+    "wdm:start": "webdriver-manager start",
+    "wdm:update": "webdriver-manager update",
+    "e2e": "protractor ./tests/e2e/built/config.js",
+    "tsc:tests": "tsc ./tests/e2e/*.ts --outDir ./tests/e2e/built/"
   },
   "keywords": [
     "3drepo",
@@ -25,18 +30,25 @@
     "angular-sanitize": "1.6.5",
     "angular-ui-router": "0.4.2",
     "font-awesome": "^4.7.0",
-    "gulp-pug": "^3.3.0",
     "material-design-icons": "^3.0.1",
     "socket.io-client": "^2.0.3",
     "sw-precache": "^5.2.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.0.4",
+    "@types/chai-as-promised": "^7.1.0",
+    "@types/mocha": "^2.2.43",
+    "@types/node": "^8.0.31",
+    "@types/protractor": "^4.0.0",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-livereload": "^3.8.1",
     "gulp-order": "^1.1.1",
     "gulp-print": "^2.0.1",
+    "gulp-pug": "^3.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.6.0",
@@ -44,6 +56,9 @@
     "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.11",
     "merge-stream": "^1.0.1",
+    "mocha": "^3.5.3",
+    "protractor": "^5.1.2",
+    "typescript": "^2.5.3",
     "webpack": "^3.0.0",
     "webpack-stream": "^4.0.0"
   }
