--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ addons:
   chrome: stable
 
 before_install:
+    - sudo echo "127.0.0.1  test.127.0.0.1" >> /etc/hosts
     - mongo --version
     - mkdir -p submodules
     - cd submodules
