ISSUE #547 - Update deps

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "gulp": "gulp",
     "wdm": "webdriver-manager",
     "wdm:start": "webdriver-manager start --standalone",
-    "wdm:update": "webdriver-manager update --standalone", 
+    "wdm:update": "webdriver-manager update --standalone",
     "e2e:ie": "protractor ./tests/e2e/built/ie/ie-config.js --specs ./tests/e2e/built/ie/ie.js",
     "e2e": "yarn run tsc:tests && protractor ./tests/e2e/built/config/config.js && yarn run e2e:ie",
     "e2e:one": "yarn run protractor ./tests/e2e/built/config/config.js --specs ",
@@ -24,16 +24,16 @@
   "author": "3D Repo",
   "license": "AGPL-3.0",
   "dependencies": {
-    "angular": "1.6.5",
-    "angular-animate": "1.6.5",
-    "angular-aria": "1.6.5",
-    "angular-material": "1.1.4",
-    "angular-recaptcha": "3.0.3",
-    "angular-sanitize": "1.6.5",
-    "angular-ui-router": "0.4.2",
+    "angular": "^1.6.5",
+    "angular-animate": "^1.6.5",
+    "angular-aria": "^1.6.5",
+    "angular-material": "^1.1.4",
+    "angular-recaptcha": "^3.0.3",
+    "angular-sanitize": "^1.6.5",
+    "angular-ui-router": "^0.4.2",
     "font-awesome": "^4.7.0",
     "material-design-icons": "^3.0.1",
-    "socket.io-client": "^2.0.3",
+    "socket.io-client": "^2.0.4",
     "sw-precache": "^5.2.0"
   },
   "devDependencies": {
@@ -58,7 +58,7 @@
     "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.11",
     "merge-stream": "^1.0.1",
-    "mocha": "^3.5.3",
+    "mocha": "^4.0.1",
     "protractor": "^5.1.2",
     "typescript": "^2.5.3",
     "webpack": "^3.0.0",
