--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_install:
     - sudo apt-get install -y graphicsmagick 
     - mongod --version
     - until nc -z localhost 27017; do sleep 1; done
-    - test_ver=`git submodule status | grep tests | cut -f 2 -d '-' | cut -f 1 -d ' '`
+    - test_ver=`cat backend/test/testDBVersion`
     - cd submodules/tests
     - git checkout $test_ver
     - git status
