--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
   "author": "3D Repo",
   "license": "AGPL-3.0",
   "dependencies": {
+    "@types/es6-promise": "^0.0.33",
     "angular": "^1.6.5",
     "angular-animate": "^1.6.5",
     "angular-aria": "^1.6.5",
@@ -34,6 +35,7 @@
     "font-awesome": "^4.7.0",
     "material-design-icons": "^3.0.1",
     "socket.io-client": "^2.0.4",
+    "streamqueue": "^1.1.1",
     "sw-precache": "^5.2.0"
   },
   "devDependencies": {
@@ -60,7 +62,7 @@
     "merge-stream": "^1.0.1",
     "mocha": "^4.0.1",
     "protractor": "^5.1.2",
-    "typescript": "^2.5.3",
+    "typescript": "^2.6.1",
     "webpack": "^3.0.0",
     "webpack-stream": "^4.0.0"
   }
