--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,49 +24,49 @@
   "author": "3D Repo",
   "license": "AGPL-3.0",
   "dependencies": {
-    "angular": "^1.6.5",
-    "angular-animate": "^1.6.5",
-    "angular-aria": "^1.6.5",
-    "angular-material": "^1.1.4",
-    "angular-recaptcha": "^3.0.3",
-    "angular-sanitize": "^1.6.5",
-    "angular-ui-router": "^0.4.2",
-    "font-awesome": "^4.7.0",
-    "material-design-icons": "^3.0.1",
-    "socket.io-client": "^2.0.4",
-    "sw-precache": "^5.2.0"
+    "angular": "1.6.7",
+    "angular-animate": "1.6.7",
+    "angular-aria": "1.6.7",
+    "angular-material": "1.1.5",
+    "angular-recaptcha": "4.1.2",
+    "angular-sanitize": "1.6.7",
+    "angular-ui-router": "0.4.3",
+    "font-awesome": "4.7.0",
+    "material-design-icons": "3.0.1",
+    "socket.io-client": "2.0.4",
+    "sw-precache": "5.2.0"
   },
   "devDependencies": {
-    "@types/angular": "^1.6.39",
-    "@types/angular-material": "^1.1.56",
-    "@types/chai": "^4.0.4",
-    "@types/chai-as-promised": "^7.1.0",
-    "@types/mocha": "^2.2.43",
-    "@types/node": "^8.0.31",
-    "@types/protractor": "^4.0.0",
-    "chai": "^4.1.2",
-    "chai-as-promised": "^7.1.1",
-    "del": "^3.0.0",
+    "@types/angular": "1.6.39",
+    "@types/angular-material": "1.1.57",
+    "@types/chai": "4.0.10",
+    "@types/chai-as-promised": "7.1.0",
+    "@types/mocha": "2.2.44",
+    "@types/node": "8.5.1",
+    "@types/protractor": "4.0.0",
+    "chai": "4.1.2",
+    "chai-as-promised": "7.1.1",
+    "del": "3.0.0",
     "gulp": "gulpjs/gulp.git#4.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-livereload": "^3.8.1",
-    "gulp-order": "^1.1.1",
-    "gulp-print": "^2.0.1",
-    "gulp-pug": "^3.3.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-size": "^2.1.0",
-    "gulp-sourcemaps": "^2.6.0",
-    "gulp-typescript": "^3.2.3",
-    "gulp-uglify": "^3.0.0",
-    "gulp-util": "^3.0.8",
-    "gulp-watch": "^4.3.11",
-    "mocha": "^4.0.1",
-    "protractor": "^5.1.2",
-    "streamqueue": "^1.1.1",
-    "tslint": "^5.8.0",
-    "typescript": "^2.6.1",
-    "webpack": "^3.0.0",
-    "webpack-stream": "^4.0.0"
+    "gulp-concat": "2.6.1",
+    "gulp-cssnano": "2.1.2",
+    "gulp-livereload": "3.8.1",
+    "gulp-order": "1.1.1",
+    "gulp-print": "2.0.1",
+    "gulp-pug": "3.3.0",
+    "gulp-rename": "1.2.2",
+    "gulp-size": "2.1.0",
+    "gulp-sourcemaps": "2.6.1",
+    "gulp-typescript": "3.2.3",
+    "gulp-uglify": "3.0.0",
+    "gulp-util": "3.0.8",
+    "gulp-watch": "4.3.11",
+    "mocha": "4.0.1",
+    "protractor": "5.2.2",
+    "streamqueue": "1.1.2",
+    "tslint": "5.8.0",
+    "typescript": "2.6.2",
+    "webpack": "3.10.0",
+    "webpack-stream": "4.0.0"
   }
 }
