--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.6.0",
+    "gulp-typedoc": "^2.1.1",
     "gulp-typescript": "^3.2.3",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
@@ -65,6 +66,7 @@
     "protractor": "^5.1.2",
     "streamqueue": "^1.1.1",
     "tslint": "^5.8.0",
+    "typedoc": "^0.9.0",
     "typescript": "^2.6.1",
     "webpack": "^3.0.0",
     "webpack-stream": "^4.0.0"
