--- a/backend/package.json
+++ b/backend/package.json
@@ -35,7 +35,7 @@
     "fs.extra": "1.3.2",
     "geodesy": "1.1.2",
     "gm": "1.23.0",
-    "json2csv": "^3.7.3",
+    "json2csv": "3.7.3",
     "lodash": "3.10.1",
     "mathjs": "1.7.1",
     "moment": "2.13.0",
@@ -46,14 +46,14 @@
     "multer": "1.1.0",
     "node-uuid": "1.4.7",
     "nodemailer": "2.3.2",
-    "paypal-rest-sdk": "^1.7.1",
+    "paypal-rest-sdk": "1.7.1",
     "phantom": "4.0.5",
-    "pug": "^2.0.0-rc.4",
-    "serialize-javascript": "^1.4.0",
+    "pug": "2.0.0-rc.4",
+    "serialize-javascript": "1.4.0",
     "serve-favicon": "2.3.0",
     "session-file-store": "1.0.0",
     "shortid": "2.2.4",
-    "soap": "^0.21.0",
+    "soap": "0.21.0",
     "socket.io": "1.4.5",
     "socket.io-client": "1.4.0",
     "vhost": "3.0.2",
@@ -64,17 +64,17 @@
     "yauzl": "git://github.com/3drepo/yauzl.git"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "eslint": "^4.6.1",
-    "eslint-plugin-node": "^5.1.1",
+    "chai": "4.1.2",
+    "eslint": "4.6.1",
+    "eslint-plugin-node": "5.1.1",
     "gulp": "3.9.1",
-    "gulp-env": "^0.4.0",
-    "gulp-eslint": "^4.0.0",
-    "gulp-mocha": "^4.3.1",
+    "gulp-env": "0.4.0",
+    "gulp-eslint": "4.0.0",
+    "gulp-mocha": "4.3.1",
     "mocha": "3.5.3",
     "mockgoose": "6.0.3",
     "mongoose-mock": "0.4.0",
-    "nyc": "^11.2.1",
+    "nyc": "11.2.1",
     "proxyquire": "1.7.4",
     "sinon": "3.2.1",
     "supertest": "3.0.0"
