ISSUE #509 - server in the right tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,16 +50,13 @@ cache:
 services:
   - rabbitmq
   - mongodb
-  
-script:
-    - yarn run wdm:update
-    - yarn run wdm:start > /dev/null 2>&1 &
-    - cd ./../backend 
-    - yarn run test
-    - cd ./../ 
-    - NODE_ENV=test NODE_CONFIG_DIR='./config' node "./backend/3drepo.js" & sleep 5 
-    - cd ./frontend
-    - yarn run e2e
+
+env:
+  - TEST_SUITE=backend
+  - TEST_SUITE=frontend
+
+script: 
+    - test.sh TEST_SUITE
 
 notifications:
     email: 
