--- a/run/3drepo.yml
+++ b/run/3drepo.yml
@@ -1,7 +1,7 @@
 apps:
   - name : "3drepo"
     script: "./backend/3drepo.js"
-    instances: 2
+    instances: "max"
     watch: false
-    exec_mode: "fork"
+    exec_mode: "cluster"
       
