--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,8 @@
     "font-awesome": "4.7.0",
     "material-design-icons": "3.0.1",
     "socket.io-client": "2.0.4",
-    "sw-precache": "5.2.0"
+    "sw-precache": "5.2.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@types/angular": "1.6.39",
